--- a/criando-endpoints-api-express/package.json
+++ b/criando-endpoints-api-express/package.json
@@ -6,7 +6,9 @@
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
-    "ts-node-dev": "^2.0.0"
+    "@types/node": "^20.2.5",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.1.3"
   },
   "name": "criando-endpoints-api-express",
   "version": "1.0.0",
